tests/ui/attributes/unix_sigpipe/unix_sigpipe-bare.with_feature.stderr
error: the only valid variant of the `unix_sigpipe` attribute is `#[unix_sigpipe = "sig_dfl"]`
  --> $DIR/unix_sigpipe-bare.rs:5:1
   |
LL | #[unix_sigpipe]
   | ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

